--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 </head>
 <body>
-    <!--címsorok: h1-h6-ig van, legnagyobb a h1, alap stílusbeállítása, hogy félkövér-->
+        <nav>
+        <a href="index.html">Főoldal</a> |
+        <a href="keplink.html">Képlink</a> |
+    </nav>
     <h1>Mitru Zsolt Bence</h1>
 
     <h3><p>Bemutatkozásom</p></h3>
