--- a/keplink.html
+++ b/keplink.html
@@ -6,6 +6,10 @@
     <title>Kép + link feladat.</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Főoldal</a> |
+        <a href="keplink.html">Képlink</a> |
+    </nav>
     <h2> Kép + link feladat</h2>
     <br> <!--Sortörés-->
     <a href="https://hu.wikipedia.org/wiki/Alma_(n%C3%B6v%C3%A9nynemzets%C3%A9g)" target="_blank"><img src="img/alma.jpg" alt="alma" title="alma" width="200"></a>
