--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
 
     <h2><p>Én a Miskolci SZC Kandó Kálmán Informatikai Technikumba járok még csak most kezdtem az új tanévet. Azért az informatika és távközlési ágazat mert abban sok mindent meglehet tanulni a kódolásról és akár alkalmazni is lehet a való életben is. Azok a terveim vannak a jövőben hogy ha elvégzem az 5 évet utána elkezdek sok mindent pl: játékot fejleszteni weboldalt csinálni meg nagyon sok minden van még amit sorolhatnék.</p></h2>
 
+    <h3>Kollázs Képem</h3>
+
+    <img src="img/Kedvenc elfoglaltságom.jpg" alt="Kollázs" title="Kollázs width"400">
+
 </body>
 </html>
