--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <h3>Kollázs Képem</h3>
 
-    <img src="img/Kedvenc elfoglaltságom.jpg" alt="Kollázs" title="Kollázs device-width>
+    <img src="img/Kedvenc elfoglaltságom.jpg" alt="Kollázs" title="Kollázs width"100">
 
 </body>
 </html>
