--- a/kollazskep.html
+++ b/kollazskep.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <img src="img/Kedvenc elfoglaltságom.jpg" alt="Kollázs" title="Kollázs" 
+    <img src="img/Kedvenc elfoglaltságom.jpg" alt="Kollázs" title="Kollázs" width="10"
 
 </body>
 </html>
