--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
         <a href="index.html">Főoldal</a> |
         <a href="keplink.html">Képlink</a> |
-        <a href="listak.html">Képlink</a> |
+        <a href="listak.html">listák</a> |
     </nav>
     <h1>Mitru Zsolt Bence</h1>
 
