--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="index.html">Főoldal</a> |
         <a href="keplink.html">Képlink</a> |
         <a href="listak.html">listák</a> |
+        <a href="Orarend.html">Órarend</a> |
     </nav>
     <h1>Mitru Zsolt Bence</h1>
 
