--- a/listak.html
+++ b/listak.html
@@ -6,6 +6,12 @@
 
 </head>
 <body>
+        <nav>
+        <a href="index.html">Főoldal</a> |
+        <a href="keplink.html">Képlink</a> |
+        <a href="listak.html">listák</a> |
+        <a href="Orarend.html">Órarend</a> |
+        </nav>
     <h2>LISTÁK</h2>
     <h3>Kedvenc tevékenységeim</h3>
     <ul>
